Minor changes in footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&family=Raleway:wght@400;700&display=swap');
     </style>
-    <link rel="shortcut icon" href="coding.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="images/coding.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
