add a loader and remove scroll bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     <main>
         <section id="home">
             <article id="intro">
@@ -92,5 +99,6 @@
             <li title="Frontend Mentor"><a href="https://frontendmentor.io/rahul8858">Frontend Mentor</a></li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
