changed the link of todo app live page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <li>Tailwind CSS</li>
                             <li>JavaScript</li>
                         </ul>
-                        <a href="https://rahulgtst.github.io/todo/" title="live link"><img src="./images/link.png" alt="live link" height="15"></a>
+                        <a href="https://todo-tau-murex.vercel.app/" title="live link"><img src="./images/link.png" alt="live link" height="15"></a>
                     </article>
                 </li>
             </ul>
