Update the new resume and Download file name

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             development and am fluent in HTML, CSS, and JavaScript. Learning and
             Building Projects using React and Tailwind CSS.
           </p>
-          <a href="/Rahul_Gupta_Resume.pdf" download="resume">Resume</a>
+          <a href="/Rahul-Gupta-Resume.pdf" download="Rahul-Gupta-Resume">Resume</a>
           <article id="techStack">
             <img src="./images/html.png" height="40" alt="HTML" title="HTML" />
             <img src="./images/css.png" height="40" alt="CSS" title="CSS" />
